--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700|Vollkorn:400,400i,700&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="dist/css/style.css">
     <title>Test Web Dev</title>
 </head>
@@ -59,15 +59,13 @@
                         щоб дізнатись усі подробиці Вашої перемоги.</p>
                 </div>
                 <div class="congruts__main_photo">
-                    <img class="congruts__main_photo-img" src="dist/img/congruts_diplom.jpg"
-                        alt="congruts_diplom NOT FOUND">
+                    <img class="congruts__main_photo-img modal-open" src="dist/img/congruts_diplom.jpg"
+                        alt="congruts_diplom NOT FOUND" data-toggle="modal" data-target="#exampleModalCenter">
                     <a class="button congruts-button" href="dist/img/congruts_diplom.jpg"
                         download="congruts_diplom.jpg">ЗАВАНТАЖИТИ</a>
                     <ul class="congruts__main_photo-list">
-                        <li><img src="dist/img/diplom_add_1.jpg" name='1' class="congruts__main_photo-img"
-                                alt="diplom_add_1 NOT FOUND"></li>
-                        <li><img src="dist/img/diplom_add_2.jpg" name='2' class="congruts__main_photo-img"
-                                alt="diplom_add_2 NOT FOUND"></li>
+                        <li><img src="dist/img/diplom_add_1.jpg" name='1' class="modal-open congruts__main_photo-img"
+                                alt="diplom_add_1 NOT FOUND" data-toggle="modal" data-target="#exampleModalCenter"></li>
                     </ul>
                 </div>
             </div>
@@ -96,7 +94,7 @@
                         отримання виграшу та надішліть нам. Після цього кур’єр “PrizeMe” доставить Вам <span
                             class="brand-color">317 000,00 гривень</span> прямо додому.</p>
                 </div>
-                <img src="dist/img/prepair_img.png" alt="prepair_img NOT FOUND" class="example__main_img">
+                <img src="dist/img/prepair_img.png" alt="prepair_img NOT FOUND" class="modal-open example__main_img" data-toggle="modal" data-target="#exampleModalCenter">
             </div>
             <div class="congruts__footer example__footer text-attention">
                 ЗАПОВНЕНИЙ “БЛАНК НА ДОСТАВКУ ВИГРАШУ” – ВАША ГАРАНТІЯ ОТРИМАННЯ <span>317 000,00 ГРИВЕНЬ!</span>
@@ -202,7 +200,53 @@
                 alt="IMG from Google Not Found">
         </footer> 
     </div>
+    <div class="modal fade " id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered" role="document">
+          <div class="modal-content bg-dark">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body w-100">
+                  <div class="modal-item text-center"><img class="card-img-top congruts__main_photo-img" src="dist/img/congruts_diplom.jpg"
+                    alt="congruts_diplom NOT FOUND"></div>
+                  <div class="modal-item text-center">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner ">
+                              <div class="carousel-item active">
+                                <img src="dist/img/diplom_add_1.jpg" name='1' class=" card-img-top congruts__main_photo-img"
+                                alt="diplom_add_1 NOT FOUND">
+                              </div>
+                              <div class="carousel-item">
+                                    <img src="dist/img/diplom_add_2.jpg" name='2' class=" card-img-top congruts__main_photo-img"
+                                    alt="diplom_add_2 NOT FOUND">
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                      </div>
+                    </div>
+                  <div class="modal-item text-center"><img src="dist/img/prepair_img.png" alt="prepair_img NOT FOUND" class="example__main_img"></div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
+
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src='dist/js/index.js'></script>
 </body>
 
