--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container_block">
         <div class="cover">
             <section class="top-section">
                 <p class="top-section__note">*У разі Вашої перемоги в Акції "Золотий Фонд" та виникнення подібної
@@ -94,7 +94,7 @@
                         отримання виграшу та надішліть нам. Після цього кур’єр “PrizeMe” доставить Вам <span
                             class="brand-color">317 000,00 гривень</span> прямо додому.</p>
                 </div>
-                <img src="dist/img/prepair_img.png" alt="prepair_img NOT FOUND" class="modal-open example__main_img" data-toggle="modal" data-target="#exampleModalCenter">
+                <img src="dist/img/prepair_img.png" alt="prepair_img NOT FOUND" class="modal-open example__main_img">
             </div>
             <div class="congruts__footer example__footer text-attention">
                 ЗАПОВНЕНИЙ “БЛАНК НА ДОСТАВКУ ВИГРАШУ” – ВАША ГАРАНТІЯ ОТРИМАННЯ <span>317 000,00 ГРИВЕНЬ!</span>
@@ -223,17 +223,16 @@
                                     alt="diplom_add_2 NOT FOUND">
                               </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <div class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                               <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            </div>
+                            <div class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                               <span class="carousel-control-next-icon" aria-hidden="true"></span>
                               <span class="sr-only">Next</span>
-                            </a>
+                            </div>
                       </div>
                     </div>
-                  <div class="modal-item text-center"><img src="dist/img/prepair_img.png" alt="prepair_img NOT FOUND" class="example__main_img"></div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
